# pw-mapbuilder

./: .gitignore  Cargo.toml  README.md  build_web.sh  index.html  script.js
.cargo/: config.toml
.github/workflows/: main.yml
assets/shaders/: background_shader.hex.wgsl  background_shader.oct.wgsl  background_shader.sq.wgsl  background_shader.tri.wgsl  background_shader.wgsl  custom_material.frag  custom_material.vert
src/: background.rs  input.rs  lib.rs  main.rs  map_config.rs  planet.rs  scene.rs  ui.rs  utils.rs
web/: index.html
