[package]
name = "mapbuilder"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.0", features = ["dynamic"] }
bevy_egui = "0.15.0"
bytemuck = "1.11.0"
egui = "0.18.1"

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
