[package]
name = "mapbuilder"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.0", features = ["dynamic"] }
bevy_egui = "0.15.0"
bevy_framepace = "0.7.0"
bytemuck = "1.11.0"
egui = "0.18.1"
random_name_generator = "0.1.2"
rfd = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
