[package]
name = "mapbuilder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = "0.8.0"
bevy_egui = "0.15.0"
bevy_framepace = "0.7.0"
bytemuck = "1.11.0"
egui = "0.18.1"
rfd = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
petname = { version = "1.1.2", default-features = false, features = [
  "default_dictionary",
] }

rand = { version = "0.8.5", features = ["std_rng"] }

[features]
default = ["fast-compile"]
fast-compile = ["bevy/dynamic"]

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
